# intellirouter

./: .actrc  .dockerignore  .gitignore  .tarpaulin.toml  COMPILATION_FIXES.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.dev  INTEGRATION_TESTING.md  README-docker.md  README-physical-deployment.md  README.md  ROADMAP.md  TESTING.md  build.rs  claude.md  clippy.toml  docker-compose.dev.yml  docker-compose.integration.yml  docker-compose.test.yml  docker-compose.yml  implementation_plan.md  install-intellirouter.sh  intellirouter-backup.sh  intellirouter-orchestrator.service  intellirouter-persona-layer.service  intellirouter-rag-manager.service  intellirouter-restore.sh  intellirouter-router.service  network-topology.txt  pytest.ini  quick-start.md  rust-toolchain.toml  rustfmt.toml  setup.py  warning_report.md
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md  code-review-config.yml
.github/ISSUE_TEMPLATE/: bug_report.md  code_quality_improvement.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: code_quality_improvement.md
.github/workflows/: benchmarks.yml  cd.yml  ci.yml  code-review.yml  code_quality.yml  codeql-analysis.yml  dependency-review.yml  documentation.yml  e2e-tests.yml  security-audit.yml  security.yml  test.yml
benches/: chain_engine_benchmarks.rs  memory_benchmarks.rs  model_registry_benchmarks.rs  rag_manager_benchmarks.rs  router_benchmarks.rs
benches/framework/: harness.rs  metrics.rs  mod.rs  reporters.rs
config/: default.toml  development.toml  local.toml  local.toml.example  production.toml  testing.toml
dashboard/: Cargo.toml  collect_metrics.sh  run_dashboard.sh
dashboard/src/: components.rs  data.rs  main.rs  metrics.rs  utils.rs
dashboard/static/css/: dashboard.css
dashboard/static/js/: dashboard.js
dashboard/templates/: base.html.hbs  index.html.hbs
deployment/edge/: README.md  docker-compose.yml
deployment/eks/: README.md  values.yaml
deployment/gke/: README.md  values.yaml
deployment/microk8s/: README.md  values.yaml
docs/: audit_system.md  audit_system_readme.md  ci_integration.md  code_quality_goals.md  compilation_best_practices.md  documentation_system.md  enhanced_testing.md  feature_flags.md  getting_started.md  monitoring_system.md  openai_compatibility.md  performance_benchmarking.md  project_dashboard.md  security_audit.md  test_harness.md  test_harness_integration.md  testing_guide.md  testing_policy.md
docs/ipc/: channel_conventions.md  comprehensive_guide.md  index.md  message_schemas.md  security_config.md  trait_apis.md
docs/source/: api.rst  conf.py  configuration.rst  error_handling.rst  examples.rst  index.rst  installation.rst  quickstart.rst
examples/: README.md  basic_usage.rs  basic_usage.sh  simple_client.rs
examples/config/: simple.toml
examples/rust/: assertion_example.rs  benchmark_example.rs  boomerang_orchestration.rs  ci_example.rs  continuous_improvement.rs  continuous_monitoring.rs  cross_mode_communication.rs  dashboard_example.rs  docs_example.rs  enhanced_mock_example.rs  enhanced_test_data_example.rs  enhanced_testing_example.rs  mock_example.rs  reporting_example.rs  secure_ipc.rs  security_example.rs  telemetry_example.rs  test_data_example.rs  test_harness_example.rs  training_example.rs  workflow_management.rs  workshop_example.rs
helm/intellirouter/: Chart.yaml  README.md  values-eks.yaml  values-microk8s.yaml  values-minikube.yaml  values.yaml
intellirouter/: README.md  __init__.py  exceptions.py
intellirouter-test-utils/: Cargo.toml  README.md
intellirouter-test-utils/src/: fixtures.rs  helpers.rs  lib.rs  mocks.rs  test_utils.rs
intellirouter-ts/: README.md  jest.config.js  package.json  tsconfig.test.json
intellirouter-ts/examples/: chat-completion.ts  streaming-chat.ts
intellirouter-ts/src/: client.ts  errors.ts  index.ts
intellirouter/chains/: __init__.py  api.py
intellirouter/config/: __init__.py
intellirouter/memory/: __init__.py
metrics/docs/: doc_coverage_2025-05-27_23-04-50.json  doc_metrics_2025-05-27_23-04-50.json
metrics/test_restructuring/: final_report.md  improvements_report_2025-05-21_20-13-02.md  improvements_report_2025-05-21_20-20-52.md  previous_measurements.txt
proto/: README.md  chain_engine_router_core.md  chain_engine_router_core.proto  common.md  common.proto  memory_chain_engine.md  memory_chain_engine.proto  rag_manager_persona_layer.md  rag_manager_persona_layer.proto  router_core_model_registry.md  router_core_model_registry.proto  summary.md
scripts/: README-workflows.md  analyze_warnings.sh  ci_code_quality.sh  ci_test_first_check.sh  code_review.sh  generate_code_quality_report.sh  generate_metrics_charts.sh  install_test_first_hook.sh  measure_performance_metrics.sh  prd-test-restructuring.txt  prd-v1.txt  run_audit.sh  run_benchmarks.sh  run_e2e_tests.sh  run_enhanced_tests.sh  task-complexity-report.json  test-router-cli.sh  test-router-curl.sh  test-router.sh  test-workflows-locally.sh  test_first_check.sh  verify_and_measure_improvements.sh  verify_production_build.sh
scripts/docs/: check_doc_coverage.sh  generate_api_docs.sh  generate_architecture_docs.sh  generate_doc_report.sh  generate_docs.sh  generate_examples_docs.sh  generate_user_guides.sh
scripts/security/: check_code.sh  check_config.sh  check_dependencies.sh  ci_security_audit.sh  generate_security_charts.sh  make_executable.sh  run_security_audit.sh
sdk/python/: README.md  client.py  types.py
sdk/rust/: Cargo.toml  README.md
sdk/rust/src/: lib.rs
sdk/typescript/: README.md  tsconfig.json  typedoc.json
src/: cli.rs  config.rs  lib.rs  main.rs  test_utils.rs
src/modules/: mod.rs
src/test_templates/: README.md  integration_test_template.rs  mod.rs  unit_test_template.rs
tests/: README.md  e2e_tests.rs  integration_test.rs  integration_tests.rs  mod.rs  property_tests.rs  router_integration_tests.rs  strategy_evaluation.rs
tests/compilation_tools/: README.md  test_compilation_check.rs  test_warning_analyzer.sh
tests/e2e/: README.md  mod.rs
tests/framework/: mod.rs
tests/integration/: README.md  chain_tests.rs  (+3 more)
(+434 files in other folders)
