[package]
name = "intellirouter-test-utils"
version = "0.1.0"
edition = "2021"
authors = ["IntelliRouter Team"]
description = "Test utilities for the IntelliRouter project"
repository = "https://github.com/intellirouter/intellirouter"
license = "MIT OR Apache-2.0"
keywords = ["testing", "utilities", "mocks", "fixtures"]
categories = ["development-tools::testing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Main crate dependency
intellirouter = { path = "..", optional = true }

# Async runtime
tokio = { version = "1.35", features = ["full", "test-util"] }
tokio-stream = "0.1"

# Testing utilities
mockall = "0.12"
tempfile = "3.10"
rstest = "0.18"
fake = "2.9"

# Serialization/deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# HTTP client for testing API endpoints
reqwest = { version = "0.11", features = ["json", "stream"] }
mockito = "1.2"

# Futures
futures = "0.3"
async-trait = "0.1"

# Random data generation
rand = "0.8"

# UUID generation
uuid = { version = "1.6", features = ["v4"] }

# Date and time
chrono = { version = "0.4", features = ["serde"] }

# Redis
redis = { version = "0.21", features = ["tokio-comp", "connection-manager"] }

[features]
default = []
with-intellirouter = ["intellirouter"]