[package]
name = "intellirouter"
version = "0.1.0"
edition = "2021"
description = "Rust SDK for IntelliRouter"
license = "MIT"
repository = "https://github.com/yourusername/intellirouter"
documentation = "https://docs.rs/intellirouter"
readme = "README.md"

[dependencies]
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
futures = "0.3"
async-trait = "0.1"
bytes = "1.0"